# sfblib

./: .gitignore  LICENSE  README.md  USAGE.md  claude.md  main.py  pyproject.toml
src/: A_optim_sfblib.py  IG_fig3.py  IG_fig3_sfblib_vjp.py  IG_sfblib_vjp.py  MI_fm_identity.py  MI_fm_tanh.py  MI_sfblib.py  MI_tanh.py  comp_MI_identity.py  path_integral.py  sfblib.py
tests/: test_smoke.py
